Feat: upgrade jdk8 to jdk21